﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-05-24
	Removed: Ideal affinity experiment. Deemed to have no notable impact.
	Removed: Window resize&reposition feature. Deemed unnecessary for most users and too likely to break things if made into proper feature.
### 2020-04-29
	Fixed: Audio manager under some conditions fails to hook to default devices.
### 2020-04-28
	Fixed: Path visibility option was ignored. It should now properly be generated, cached, and displayed.
	Changed: Various small improvements to log output.
### 2020-04-26
	Changed: Volume changes now show the matching rule and process name as normal.
	Changed: Volume changer to use cached information before trying to harvest it (again).
### 2020-04-21
	Changed: System protection improved by increasing the number of process names.
	Changed: Protection level 2 now denies all changes, not just affinity&priority.
### 2020-04-18
	Fixed: Processing counter shift. For the final time? Who knows. Suspected multi-threading issue.
### 2020-04-16
	Fixed: NullRef when disasbling process debug when foreground monitor is disabled.
### 2020-04-05
	Fixed: ArgumentOutOfRange bug. Hopefully for good.
	Fixed: Process priority was being attempted to be set even when it was set to be ignored.
	Added: Legacy app detection utilizes uniprocessor flag in executables.
	Fixed: I/O Priority warning was output even when it was not actually relevant due to insufficient checks.
	Fixed: Several components could not be disabled correctly.
	Fixed: Paging option was incorrectly using deprecated setting.
### 2020-04-03
	Added: Display more info about legacy, 32bit, and non-LAA app traits.
	Fixed: Culture variations should no longer cause saving/loading configuration to break (e.g. decimal pointer differences).
	Fixed: Exception during initialization when certain components are disabled.