@@ -202,7 +202,6 @@
     <Compile Include="Process\Utility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelfMaintenance.cs" />
-    <Compile Include="ServiceWrapper.cs" />
     <Compile Include="Settings.Global.cs" />
     <Compile Include="Settings\HealthMonitor.cs" />
     <Compile Include="Statistics.cs" />
