@@ -629,18 +629,6 @@ namespace Taskmaster.UI.Config
 
 			if (!PowerManagerEnabled) powerPlan.Enabled = false;
 
-			// Exclusive mode
-
-			exMode = new CheckBox() { Checked = Controller.ExclusiveMode };
-			exMode.Enabled = Application.ExclusiveMode;
-			if (Application.ExclusiveMode) 
-				tooltip.SetToolTip(exMode, "Disable Windows Update and Windows Search services while this rule is in effect.");
-
-			layout.Controls.Add(new Extensions.Label() { Text = "Exclusive mode" });
-			layout.Controls.Add(exMode);
-
-			layout.Controls.Add(new Extensions.Label() { Text = "EXPERIMENTAL", ForeColor = System.Drawing.Color.Red });
-
 			// LOG ADJUSTS
 
 			logAdjusts = new CheckBox() { Checked = Controller.LogAdjusts };
@@ -868,8 +856,6 @@ namespace Taskmaster.UI.Config
 			if (IOPriorityEnabled)
 				Controller.IOPriority = (Process.IOPriority)((ioPriority?.SelectedIndex ?? 0) - 1);
 
-			Controller.ExclusiveMode = exMode.Checked;
-
 			Controller.LogAdjusts = logAdjusts.Checked;
 			Controller.LogStartAndExit = logStartNExit.Checked;
 			Controller.Warn = warning.Checked;
@@ -910,7 +896,7 @@ namespace Taskmaster.UI.Config
 		readonly Extensions.ListViewEx ignorelist;
 		readonly NumericUpDown preforder;
 
-		readonly CheckBox logAdjusts, logStartNExit, declareParent, warning, exMode;
+		readonly CheckBox logAdjusts, logStartNExit, declareParent, warning;
 
 		int cpumask = 0;
 
